--- a/example/package.json
+++ b/example/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "expo": "~54.0.18",
+    "expo-dev-client": "~6.0.16",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
